--- a/style.css
+++ b/style.css
@@ -1,28 +1,34 @@
-html {
+*, *::after, *::before {
   box-sizing: border-box;
 }
 
 body {
   background-color: black;
-  text-align: center;
-  height: 100vh;
   margin: 0;
+  height: 100vh;
+  width: 100vw;
   color: white;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
 }
+
+/* Game board styling */
 
 .boardContainer {
   display: grid;
   justify-content: center;
   align-content: center;
-  justify-items: center;
-  align-items: center;
   grid-template-columns: repeat(3, auto);
-  height: 100vh;
-  width: 100vw;
+
 }
 
-.cell{
-  font-size: 48px;
+/* Individual cells for placing X's and O's on board */
+
+.cell {
+  font-size: 4rem;
   width: 100px;
   height: 100px;
   line-height: 100px;
@@ -32,6 +38,38 @@ body {
   cursor: pointer;
 }
 
-.oops {
-  background-attachment: fixed;
+.declareWinner {
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.declareWinnerText {
+  font-size: 3rem;
+}
+
+.restartButton {
+  padding-top: 25px;
+}
+
+.restartButton button {
+  font-size: 3rem;
+  padding: .25em .25em;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.restartButton button:hover {
+  background-color: goldenrod;
+}
+
+.declare-Winner.active {
+  display: flex;
 }
