--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
   cursor: pointer;
 }
 
+/* Hides winning message by default*/
 .declareWinner {
   display: none;
   position: absolute;
@@ -50,6 +51,7 @@ body {
   font-size: 3rem;
 }
 
+/*Button styling*/
 .restartButton {
   padding-top: 25px;
 }
@@ -66,6 +68,7 @@ body {
   background-color: goldenrod;
 }
 
+/*Class for unhiding the winning message */
 .declareWinner.active {
   display: flex;
 }
